diofa i cookie impazzisco

--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,6 @@
             "matches": ["<all_urls>"],
             "js": ["content.js"]
         }
-    ]
+    ],
+    "host_permissions": ["http://localhost/*", "http://127.0.0.1/*"]
 }
