--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
                 "<all_urls>"
             ],
             "js": [
-                "content.js"
+                "dist/content.bundle.js"
             ],
             "run_at": "document_idle"
         }
