--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "vortex-vault-extension",
-  "version": "1.0.0",
-  "main": "background.js",
-  "directories": {
-    "lib": "lib"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "esbuild popup.js --bundle --outfile=popup.bundle.js --watch"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "esbuild": "^0.25.4",
-    "nodemon": "^3.1.10"
-  }
+    "name": "vortex-vault-extension",
+    "version": "1.0.0",
+    "main": "background.js",
+    "directories": {
+        "lib": "lib"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "watch": "esbuild popup.js content.js --bundle --outdir=dist --entry-names=[name].bundle --watch"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "devDependencies": {
+        "esbuild": "^0.25.4",
+        "nodemon": "^3.1.10"
+    }
 }
